# Saxo-Bank-Auth-Worker

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: auth_server.py  main.py
src/objects/: saxo_config.py
